; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_insert.c_continuous_agg_xact_invalidation_callback.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_insert.c_continuous_agg_xact_invalidation_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@continuous_aggs_cache_inval_htab = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @continuous_agg_xact_invalidation_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @continuous_agg_xact_invalidation_callback(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @continuous_aggs_cache_inval_htab, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %16

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  switch i32 %9, label %15 [
    i32 128, label %10
    i32 130, label %13
    i32 129, label %13
  ]

10:                                               ; preds = %8
  %11 = call i32 (...) @cache_inval_htab_write()
  %12 = call i32 (...) @cache_inval_cleanup()
  br label %16

13:                                               ; preds = %8, %8
  %14 = call i32 (...) @cache_inval_cleanup()
  br label %16

15:                                               ; preds = %8
  br label %16

16:                                               ; preds = %7, %15, %13, %10
  ret void
}

declare dso_local i32 @cache_inval_htab_write(...) #1

declare dso_local i32 @cache_inval_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
